--- a/src/App.scss
+++ b/src/App.scss
@@ -18,7 +18,7 @@
   display: flex;
   width: 75%;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
 }
 
@@ -26,6 +26,7 @@
   border: 2px solid black;
   display: flex;
   width: 75%;
+  height: 25%;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -50,16 +51,19 @@
   -webkit-appearance: none;
   -moz-appearance: textfield;
   border: none;
-  width: 40%;
+  outline: none;
 }
 
 .convert-btn {
-  padding: 0.5rem 1.5rem;
+  padding: 0.15rem 1.5rem;
   border: 1px solid black;
   background: white;
   border-radius: 5px;
   cursor: pointer;
-  font-size: 1.25rem;
+  font-size: 1.5rem;
+  &:active {
+    transform: translateY(1px);
+  }
 }
 
 .card-wrapper {
@@ -78,4 +82,5 @@
   width: min-content;
   border: none;
   background-color: white;
+  padding: 0.25rem;
 }
