--- a/src/App.scss
+++ b/src/App.scss
@@ -5,7 +5,7 @@
   font-family: $main-font;
   font-weight: $main-font-weight;
   height: 100%;
-  background-color: tomato;
+  background-color: rgb(162, 205, 255);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -14,9 +14,9 @@
 
 .main {
   border: 2px solid black;
-  height: 85%;
+  height: 65%;
   display: flex;
-  width: 75%;
+  width: 80%;
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
@@ -45,6 +45,7 @@
   display: flex;
   flex-flow: column nowrap;
   align-items: center;
+  font-size: 1.15rem;
 }
 
 .amount-input {
@@ -75,7 +76,7 @@
 }
 
 .form-text {
-  font-size: 1.25rem;
+  font-size: 1.5rem;
 }
 
 .currency-select {
