--- a/src/ExchangeCard/ExchangeCard.scss
+++ b/src/ExchangeCard/ExchangeCard.scss
@@ -2,21 +2,20 @@
 
 .exchange-card-wrapper {
   border: 2px solid white;
-  min-height: 40%;
+  min-height: 35%;
   min-width: 75%;
 }
 
 .exchange-card {
   padding: 1.5rem;
-}
-
-.conversion-info {
   display: flex;
-  flex-flow: column wrap;
-  justify-content: center;
+  flex-flow: column nowrap;
+  justify-content: space-evenly;
   align-items: center;
   font-size: 1.5rem;
+  min-height: 75%;
 }
+
 
 .converted-currency {
   text-transform: capitalize;
