--- a/src/ExchangeCard/ExchangeCard.scss
+++ b/src/ExchangeCard/ExchangeCard.scss
@@ -1,9 +1,11 @@
 @use "../sass/variables.scss" as *;
 
 .exchange-card-wrapper {
-  border: 2px solid white;
+  border: 2px solid black;
+  background-color: white;
+  border-radius: 5px;
   min-height: 35%;
-  min-width: 75%;
+  width: 75%;
 }
 
 .exchange-card {
@@ -13,7 +15,8 @@
   justify-content: space-evenly;
   align-items: center;
   font-size: 1.5rem;
-  min-height: 75%;
+  min-height: 100%;
+  text-align:center;
 }
 
 
