--- a/src/App.scss
+++ b/src/App.scss
@@ -5,7 +5,7 @@
   font-family: $main-font;
   font-weight: $main-font-weight;
   height: 100%;
-  background-color: #122156;
+  background-color: #356a51;
   display: flex;
   flex-direction: column;
   align-items: center;
