--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;1,300;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;200;300;400&display=swap');
 
-$main-font: "Roboto", sans-serif;
+$main-font: "Roboto Slab", serif;
 $main-font-weight: 300;
